--- a/readme
+++ b/readme
@@ -13,4 +13,4 @@ eg：What is the price of AAPL today?
 
 
 4：绘制你所查询信息的曲线图
-![wow](刚刚复制的地址)
+![wow](https://github.com/zhoushijie97/stock_chat_bot/blob/master/示意图/IMG_1104(20180925-230716).jpg)
